Fixed broken Link

--- a/03-intermediate-front-end-projects/04-twitch-streaming-status/index.html
+++ b/03-intermediate-front-end-projects/04-twitch-streaming-status/index.html
@@ -40,7 +40,7 @@
 	
 	<!-- Author info -->
 	<footer class="author">
-		Created by <strong><a href="#" target="_blank">Silviu Gherman</a></strong>
+		Created by <strong><a href="https://github.com/Slitthe" target="_blank">Silviu Gherman</a></strong>
 	</footer>
 	<!-- Main JS Script -->
 	<script src="assets/scripts/main.js"></script>
