--- a/06-advanced-front-end-development-projects/simon-game/index.html
+++ b/06-advanced-front-end-development-projects/simon-game/index.html
@@ -53,6 +53,6 @@
    <script src='/scripts/audio.js'></script>
    <script src='/scripts/elements-events.js'></script>
    <script src='/scripts/visual.js'></script>
-   <script src="main.js"></script>
+   <script src="/scripts/main.js"></script>
 </body>
 </html>
