--- a/06-advanced-front-end-development-projects/simon-game/index.html
+++ b/06-advanced-front-end-development-projects/simon-game/index.html
@@ -6,6 +6,7 @@
    <title>Simon</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <script src='/scripts/lib/howler.core.js'></script>
+   <link href="https://fonts.googleapis.com/css?family=Squada+One|VT323" rel="stylesheet">
    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
 
@@ -23,7 +24,8 @@
       </div>
 
       <div class='game-settings absolute-center'>
-         <div class='spacer absolute-center'>
+         <div class='spacer metal linear absolute-center'>
+
 
             <div class='difficulty'>
                <div class='btn-container'>
