--- a/06-advanced-front-end-development-projects/simon-game/index.html
+++ b/06-advanced-front-end-development-projects/simon-game/index.html
@@ -5,9 +5,9 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <title>Simon</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <script src='/scripts/lib/howler.core.js'></script>
+   <script src='./scripts/lib/howler.core.js'></script>
    <link href="https://fonts.googleapis.com/css?family=Squada+One|VT323" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+   <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
 
 
 </head>
@@ -142,9 +142,9 @@
       
 
    
-   <script src='/scripts/audio.js'></script>
-   <script src='/scripts/elements-events.js'></script>
-   <script src='/scripts/visual.js'></script>
-   <script src="/scripts/main.js"></script>
+   <script src='./scripts/audio.js'></script>
+   <script src='./scripts/elements-events.js'></script>
+   <script src='./scripts/visual.js'></script>
+   <script src="./scripts/main.js"></script>
 </body>
 </html>
