--- a/06-advanced-front-end-development-projects/simon-game/index.html
+++ b/06-advanced-front-end-development-projects/simon-game/index.html
@@ -13,6 +13,7 @@
       <link rel='me' href='https://github.com/slitthe/'>
       <!-- Stylesheets -->
       <link href="https://fonts.googleapis.com/css?family=Squada+One|VT323" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/normalize.css">
       <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/main.css">
    <!-- Lib Scripts -->
       <script src='scripts/lib/howler.core.js'></script>
