--- a/06-advanced-front-end-projects/tic-tac-toe/index.html
+++ b/06-advanced-front-end-projects/tic-tac-toe/index.html
@@ -10,23 +10,23 @@
 <body data-active-player=''>
    <h1>Test</h1>
 
-   <table id='board'>
-      <tr data-row='0'>
-         <td data-column='0' data-value=''> <div></div> </td>
-         <td data-column='1' data-value=''> <div></div> </td>
-         <td data-column='2' data-value=''> <div></div> </td>
-      </tr>
-      <tr data-row='1'>
-         <td data-column='0' data-value=''> <div></div> </td>
-         <td data-column='1' data-value=''> <div></div> </td>
-         <td data-column='2' data-value=''> <div></div> </td>
-      </tr>
-      <tr data-row='2'>
-         <td data-column='0' data-value=''> <div></div> </td>
-         <td data-column='1' data-value=''> <div></div> </td>
-         <td data-column='2' data-value=''> <div></div> </td>
-      </tr>
-   </table>
+   <div id='board'>
+      <div data-row='0'>
+         <div data-column='0' data-value=''> <div></div> </div>
+         <div data-column='1' data-value=''> <div></div> </div>
+         <div data-column='2' data-value=''> <div></div> </div>
+      </div>
+      <div data-row='1'>
+         <div data-column='0' data-value=''> <div></div> </div>
+         <div data-column='1' data-value=''> <div></div> </div>
+         <div data-column='2' data-value=''> <div></div> </div>
+      </div>
+      <div data-row='2'>
+         <div data-column='0' data-value=''> <div></div> </div>
+         <div data-column='1' data-value=''> <div></div> </div>
+         <div data-column='2' data-value=''> <div></div> </div>
+      </div>
+   </div>
 
    <div class='player-choice'>
       <div class='reset-choice hide'>
