--- a/06-advanced-front-end-projects/tic-tac-toe/index.html
+++ b/06-advanced-front-end-projects/tic-tac-toe/index.html
@@ -5,88 +5,106 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <title>Tic Tac Toe</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body data-active-player=''>
-   <h1>Test</h1>
+   <div id='game-container' data-game-active='false'>
+      <!-- Board -->
+      <div id='board'>
+         <div data-row='0'>
+            <div data-column='0' data-value=''>
+               <div class='value-display'></div>
+            </div>
+            <div data-column='1' data-value=''>
+               <div class='value-display'></div>
+            </div>
+            <div data-column='2' data-value=''>
+               <div class='value-display'></div>
+            </div>
+         </div>
+         <div data-row='1'>
+            <div data-column='0' data-value=''>
+               <div class='value-display'></div>
+            </div>
+            <div data-column='1' data-value=''>
+               <div class='value-display'></div>
+            </div>
+            <div data-column='2' data-value=''>
+               <div class='value-display'></div>
+            </div>
+         </div>
+         <div data-row='2'>
+            <div data-column='0' data-value=''>
+               <div class='value-display'></div>
+            </div>
+            <div data-column='1' data-value=''>
+               <div class='value-display'></div>
+            </div>
+            <div data-column='2' data-value=''>
+               <div class='value-display'></div>
+            </div>
+         </div>
+      </div>
+      
 
-   <div id='board'>
-      <div data-row='0'>
-         <div data-column='0' data-value=''> <div></div> </div>
-         <div data-column='1' data-value=''> <div></div> </div>
-         <div data-column='2' data-value=''> <div></div> </div>
+      <!-- Score and active player display -->
+      <div class='display'>
+         <div class='active-player'>
+            <div class='desc-heading'>Active</div>
+            <div class='p1'>
+               <span class='description'>P1: </span>
+               <span class='value'></span>
+            </div>
+            <div class='p2'>
+               <span class='description'>P2: </span>
+               <span class='value'></span>
+            </div>
+         </div>
+
+         <div class='score'>
+            <div class='desc-heading'>Score</div>
+            <div class='p1'>
+               <span class='description'>P1: </span>
+               <span class='value'></span>
+            </div>
+            <div class='p2'>
+               <span class='description'>P2: </span>
+               <span class='value'></span>
+            </div>
+            <div class='tie'>
+               <span class='description'>Tie: </span>
+               <span class='value'></span>
+            </div>
+         </div>
       </div>
-      <div data-row='1'>
-         <div data-column='0' data-value=''> <div></div> </div>
-         <div data-column='1' data-value=''> <div></div> </div>
-         <div data-column='2' data-value=''> <div></div> </div>
-      </div>
-      <div data-row='2'>
-         <div data-column='0' data-value=''> <div></div> </div>
-         <div data-column='1' data-value=''> <div></div> </div>
-         <div data-column='2' data-value=''> <div></div> </div>
+
+      <!-- Game start settings -->
+      <div class='game-settings'>
+         <div class='reset-choice hide'>
+            <button>RESET</button>
+         </div>
+         <div class='player-mode'>
+            <div class='desc-heading'>Game mode</div>            
+            <button class='mode-change' data-mode-value='1p'>1p</button>
+            <button class='mode-change' data-mode-value='2p'>2p</button>
+         </div>
+         <div class='player-selection hide'>
+            <div class='desc-heading'>Player 1 is </div>            
+            <button data-player-value='x' class='player-change'>x</button>
+            <button data-player-value='o' class='player-change'>o</button>
+         </div>
+         <div class='who-starts hide'>
+            <div class='desc-heading'>Starting player</div>
+            <button data-player='p1' class='p1'>x</button>
+            <button data-player='p2' class='p2'>o</button>
+         </div>
       </div>
    </div>
 
-   <div class='player-choice'>
-      <div class='reset-choice hide'>
-         <button>RESET</button>
-      </div>
-      <div class='player-mode'>
-         <button class='mode-change'>1p</button>
-         <button class='mode-change'>2p</button>
-      </div>
-      <div class='player-selection hide'>
-         <button class='player-change'>x</button>
-         <button class='player-change'>o</button>
-      </div>
-      <div class='who-starts hide'>
-         Who starts
-         <button data-player='p1' class='p1'>x</button>
-         <button data-player='p2' class='p2'>o</button>
-      </div>
-   </div>
 
-   <div class='display'>
-      <div class='active-player'>
-         <div class='p1'>
-            <span>P1: </span> <span class='value'></span>
-         </div>
-         <div class='p2'>
-            <span>P2: </span> <span class='value'></span>
-         </div>
-      </div>
-      <hr><hr>
-      <div class='score'>
-         <div class='p1'>
-            <span>P1: </span> <span class='value'></span>
-         </div>
-         <div class='p2'>
-            <span>P2: </span> <span class='value'></span>
-         </div>
-         <div class='tie'>
-            <span>Tie </span> <span class='value'></span>
-         </div>
-      </div>
-   </div>
 
    <script src="js/main.js"></script>
-   <script src="js/dom-interact.js"></script>
-   <script>
-      // var currentPlayer = 'x';
-
-
-      // var values = ['x', 'o', ''];
-      // var boards = Array.prototype.slice.call(document.querySelectorAll('td'));
-
-      // boards.forEach(function(box) {
-      //    box.addEventListener('click', function() {
-      //       getValue = this.getAttribute('data-value');
-      //       var plusValue =  (values.indexOf(getValue) + 1) % values.length; 
-      //       this.setAttribute('data-value', values[plusValue]);
-      //    });
-      // });
-      
-   </script>
 </body>
 </html>
