Final styling state
Styling wise, need only to test on older browsers and different devices to ensure proper cross-browser and device compatibility.

--- a/06-advanced-front-end-projects/tic-tac-toe/index.html
+++ b/06-advanced-front-end-projects/tic-tac-toe/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
    <meta charset="utf-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <title>Tic Tac Toe</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1">
    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
@@ -13,37 +13,37 @@
    <div id='game-container' data-game-active='false'>
       <!-- Board -->
       <div id='board'>
-         <div data-row='0'>
-            <div data-column='0' data-value=''>
-               <div class='value-display'></div>
+         <div class='row'>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>
             </div>
-            <div data-column='1' data-value=''>
-               <div class='value-display'></div>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
             </div>
-            <div data-column='2' data-value=''>
-               <div class='value-display'></div>
-            </div>
-         </div>
-         <div data-row='1'>
-            <div data-column='0' data-value=''>
-               <div class='value-display'></div>
-            </div>
-            <div data-column='1' data-value=''>
-               <div class='value-display'></div>
-            </div>
-            <div data-column='2' data-value=''>
-               <div class='value-display'></div>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
             </div>
          </div>
-         <div data-row='2'>
-            <div data-column='0' data-value=''>
-               <div class='value-display'></div>
+         <div class='row'>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
             </div>
-            <div data-column='1' data-value=''>
-               <div class='value-display'></div>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
             </div>
-            <div data-column='2' data-value=''>
-               <div class='value-display'></div>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
+            </div>
+         </div>
+         <div class='row'>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
+            </div>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
+            </div>
+            <div class='column' data-value=''>
+               <button class='value-display'></button>               
             </div>
          </div>
       </div>
