Added a master index.html file to reference the sub projects

--- a/03-intermediate-front-end-projects/01-random-quote-machine/index.html
+++ b/03-intermediate-front-end-projects/01-random-quote-machine/index.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Random Quote Generator</title>
-	<!-- Keep the above tags above any other tags -->
+   <!-- Keep the above tags above any other tags -->
+   
 	<!-- Facebook meta tags -->
 	<meta property="og:url" content="">
 	<meta property="og:type" content="website">
@@ -13,11 +14,13 @@
 	<meta property="og:description" content="A random quote generator webpage">
 	<meta property="og:site_name" content="Random Quote Generator">
 	<meta property="og:locale" content="en">
-	<meta property="article:author" content="Silviu Gherman">
+   <meta property="article:author" content="Silviu Gherman">
+   
 	<!-- Links -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Lora" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
-	<link href="assets/styles/main.css" type="text/css" rel="stylesheet">
+   <link href="./assets/style/main.css" type="text/css" rel="stylesheet">
+   
 	<!-- jQuery -->
 	<script
 		src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -49,7 +52,7 @@
 		</div>
 	</main>
 
-	<script src="assets/scripts/main.js"></script>
+	<script src="./assets/scripts/main.js"></script>
 </body>
 
 </html>
