--- a/03-intermediate-front-end-projects/02-show-the-local-weather/index.html
+++ b/03-intermediate-front-end-projects/02-show-the-local-weather/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Weather Machine</title>
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa|Barlow" rel="stylesheet">
-	<link href="assets/styles/main.css" type="text/css" rel="stylesheet">
+	<link href="./assets/styles/main.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 				<span class="value">0</span> 
 				<span class="sign">°C</span> 
 			</div>
-			<img class="weather-icon float-60" src="assets/images/clear-day.svg" alt="Icon representing the current weather state">
+			<img class="weather-icon float-60" src="./assets/images/clear-day.svg" alt="Icon representing the current weather state">
 		</div>
 		<div class="short-summary">Short Summary</div>
 		<div class="long-summary">A bit longer summary</div>
@@ -33,15 +33,15 @@
 		<!-- Search and get location button -->
 		<form class="float-80 search clearfix">
 			<input class="float-40" type="text" placeholder="Enter location:">
-			<button type="reset"><img src="assets/images/search.svg"></button>
+			<button type="reset"><img src="./assets/images/search.svg"></button>
 		</form>
-		<button class="location-btn" type="button"><img src="assets/images/location.svg"></button>
+		<button class="location-btn" type="button"><img src="./assets/images/location.svg"></button>
 
 		<!-- Various other types of data grid -->
 		<ul class="data-container clearfix">
 			<li class="precipitations">
 				<div class="description">Rain Chance</div>
-				<img class="float-20" src="assets/images/rain-chance.svg" height="20">
+				<img class="float-20" src="./assets/images/rain-chance.svg" height="20">
 				<div class="value-container float-80">
 					<span class="value">0</span> 
 					<span class="sign">%</span> 
@@ -49,7 +49,7 @@
 			</li>
 			<li class="humidity">
 				<div class="description">Humidity</div>
-				<img class="float-20" src="assets/images/humidity.svg">
+				<img class="float-20" src="./assets/images/humidity.svg">
 				<div class="value-container float-80">
 					<span class="value">0</span> 
 					<span class="sign">%</span>
@@ -57,7 +57,7 @@
 			</li>
 			<li class="pressure">
 				<div class="description">Pressure</div>
-				<img class="float-20" src="assets/images/atm-pressure.svg" height="20">
+				<img class="float-20" src="./assets/images/atm-pressure.svg" height="20">
 				<div class="value-container float-80">
 					<span class="value">0</span> 
 					<span class="sign">mb</span>
@@ -65,8 +65,8 @@
 			</li>
 			<li class="wind-direction bigger-data-item">
 				<div class="description">Wind Direction</div>
-				<img class="float-25" src="assets/images/wind-direction.svg" height="20">
-				<img class="float-25 pointer-arrow" src="assets/images/wind-arrow.svg" height="20">
+				<img class="float-25" src="./assets/images/wind-direction.svg" height="20">
+				<img class="float-25 pointer-arrow" src="./assets/images/wind-arrow.svg" height="20">
 				<div class="value-container float-50">
 					<span class="value">0</span> 
 					<span class="sign">°</span>
@@ -74,7 +74,7 @@
 			</li>
 			<li class="wind-speed">
 				<div class="description">Wind Speed</div>
-				<img class="float-20" src="assets/images/wind-speed.svg" height="20">
+				<img class="float-20" src="./assets/images/wind-speed.svg" height="20">
 				<div class="value-container float-80">
 					<span class="value">0</span> 
 					<span class="sign">mph</span>
@@ -109,7 +109,7 @@
 		</p>
 	</footer>
 
-	<script src="assets/scripts/main.js"></script>
+	<script src="./assets/scripts/main.js"></script>
 </body>
 
 </html>
