--- a/01-basic-front-end-projects/personal-portofolio/index.html
+++ b/01-basic-front-end-projects/personal-portofolio/index.html
@@ -9,8 +9,8 @@
 	<title>Portofolio Demo</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" >
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" >
-	<link href="styles/reset.css" type="text/css" rel="stylesheet" >
-	<link href="styles/main.css" type="text/css" rel="stylesheet" >
+	<link href="./styles/reset.css" type="text/css" rel="stylesheet" >
+	<link href="./styles/main.css" type="text/css" rel="stylesheet" >
 </head>
 
 <body>
@@ -202,7 +202,7 @@
 
 	<!-- JS Scripts , placed at end to allow the page to end properly and not rely on .ready() jQuery function -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script type="text/javascript" src="scripts/main.js"></script>
+	<script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 
 </html>
