--- a/06-advanced-front-end-projects/pomodoro-clock/index.html
+++ b/06-advanced-front-end-projects/pomodoro-clock/index.html
@@ -18,15 +18,14 @@
       <!-- Google fonts -->
    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
       <!-- External -->
-   <link rel="stylesheet" href="css/lib/fontello-embedded.css">
-   <link rel="stylesheet" href="css/html5-boilerplate-default.css">
-   <link rel="stylesheet" href="css/lib/normalize.css">
+   <link rel="stylesheet" href="./css/lib/fontello-embedded.css">
+   <link rel="stylesheet" href="./css/lib/normalize.css">
       <!-- Own -->
-   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="./css/main.css">
    
    <!-- Scripts --> 
       <!-- Howler.js sound lib -->
-      <script src='js/lib/howler.min.js'></script>
+      <script src='./js/lib/howler.min.js'></script>
       <script>
          // NO-JS remove
          document.documentElement.classList.remove('no-js');
@@ -140,7 +139,7 @@
 	<!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/lib/jquery.min.js"><\/script>')</script>
-	<script src="js/main.js"></script>
+	<script src="./js/main.js"></script>
 
 </body>
 </html>
