Typo causing image fetching to fail

--- a/01-basic-front-end-projects/personal-portofolio/index.html
+++ b/01-basic-front-end-projects/personal-portofolio/index.html
@@ -52,11 +52,11 @@
 				<div class="clearfix">
 					<div class="content-heading"><h3>Technology Inventory:</h3></div>
 					<ul class="content">
-						<li>HTML <img src="Images/html.png" alt="HyperText Markup Language (HTML) logo ."></li>
-						<li>CSS <img src="Images/css.png" alt="Cascading Style Sheets (CSS) logo ."></li>
-						<li>JavaScript <img src="Images/js.png" alt="JavaScript (JS) logo."></li>
-						<li>Bootstrap <img src="Images/bootstrap.png" alt="Bootstrap (Framework) logo."></li>
-						<li>jQuery <img src="Images/jquery.png" alt="jQuery (JavaScript library) logo."></li>
+						<li>HTML <img src="images/html.png" alt="HyperText Markup Language (HTML) logo ."></li>
+						<li>CSS <img src="images/css.png" alt="Cascading Style Sheets (CSS) logo ."></li>
+						<li>JavaScript <img src="images/js.png" alt="JavaScript (JS) logo."></li>
+						<li>Bootstrap <img src="images/bootstrap.png" alt="Bootstrap (Framework) logo."></li>
+						<li>jQuery <img src="images/jquery.png" alt="jQuery (JavaScript library) logo."></li>
 					</ul>
 				</div>
 			</div>
@@ -77,7 +77,7 @@
 							<a href="https://codepen.io/Slitthe/pen/bozMgG" class="link-button" target="_blank" >Source Code</a>
 						</div>
 					</div>
-					<img src="Images/projectOne.png" alt="Project's website screenshot." >
+					<img src="images/projectOne.png" alt="Project's website screenshot." >
 					<figcaption><h3><span class="font-normal">Purrfect Match</span></h3></figcaption>
 				</figure>
 
@@ -88,7 +88,7 @@
 							<a href="https://codepen.io/Slitthe/pen/QqYrGb" class="link-button" target="_blank" >Source Code</a>
 						</div>
 					</div>
-					<img src="Images/projectTwo.png" alt="Project's website screenshot.">
+					<img src="images/projectTwo.png" alt="Project's website screenshot.">
 					<figcaption><h3><span class="font-normal">Minimalistic Image Gallery</span></h3></figcaption>
 				</figure>
 
@@ -99,7 +99,7 @@
 							<a href="https://codepen.io/Slitthe/pen/vebjgQ" class="link-button" target="_blank" >Source Code</a>
 						</div>
 					</div>
-					<img src="Images/projectThree.png" alt="Project's website screenshot.">
+					<img src="images/projectThree.png" alt="Project's website screenshot.">
 					<figcaption><h3><span class="font-normal">Tic Tac Toe Board</span></h3></figcaption>
 				</figure>
 
@@ -110,7 +110,7 @@
 							<a href="https://codepen.io/Slitthe/pen/oGmdZy" class="link-button" target="_blank" >Source Code</a>
 						</div>
 					</div>
-					<img src="Images/projectFour.png" alt="Project's website screenshot.">
+					<img src="images/projectFour.png" alt="Project's website screenshot.">
 					<figcaption><h3><span class="font-normal">RGB Color Game</span></h3></figcaption>
 				</figure>
 
@@ -121,7 +121,7 @@
 							<a href="https://codepen.io/Slitthe/pen/WZPJwN" class="link-button" target="_blank" >Source Code</a>
 						</div>
 					</div>
-					<img src="Images/projectFive.png" alt="Project's website screenshot.">
+					<img src="images/projectFive.png" alt="Project's website screenshot.">
 					<figcaption><h3><span class="font-normal">Bootstrap Image Gallery</span></h3></figcaption>
 				</figure>
 
@@ -132,7 +132,7 @@
 							<a href="https://codepen.io/Slitthe/pen/BwMxNe" class="link-button" target="_blank" >Source Code</a>
 						</div>
 					</div>
-					<img src="Images/projectSix.png" alt="Project's website screenshot.">
+					<img src="images/projectSix.png" alt="Project's website screenshot.">
 					<figcaption><h3><span class="font-normal">CSS Blog</h3></figcaption>
 				</figure>
 
